Import of ELIZABETH/ogd-0.03 from CPAN.
gitpan-cpan-distribution: ogd
gitpan-cpan-version:      0.03
gitpan-cpan-path:         ELIZABETH/ogd-0.03.tar.gz
gitpan-cpan-author:       ELIZABETH
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,23 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         ogd
-version:      0.02
-version_from: lib/ogd.pm
-installdirs:  site
+---
+abstract: 'ordered global destruction of objects stored in globals'
+author:
+  - 'Elizabeth Mattijsen (liz@dijkmat.nl)'
+build_requires:
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.112150'
+license: unknown
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: ogd
+no_index:
+  directory:
+    - t
+    - inc
 requires:
-    B:                             0
-    Scalar::Util:                  0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+  B: 0
+  Scalar::Util: 0
+version: 0.03
